# knowledge-ai

./: .gitignore  pyproject.toml
data/raw/: sample.txt
src/: minimal_rag.py
