[project]
name = "knowledge-ai"
version = "0.1.0"
description = "Production-grade Personal Knowledge AI using RAG"
requires-python = ">=3.11"

dependencies = [
    "llama-index-core>=0.10.0",
    "llama-index-readers-file>=0.1.0",
    "llama-index-vector-stores-faiss>=0.1.0",
    "sentence-transformers>=2.6.0",
    "faiss-cpu>=1.8.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]
