[project]
name = "knowledge-ai"
version = "0.1.0"
description = "Personal Knowledge AI with RAG"
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.3.0",
    "faiss-cpu>=1.7.4",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pypdf>=3.0.0",
    "playwright>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"